# weakness-driven-problem-synthesis

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml
.claude/commands/: synthesize.md
docs/superpowers/plans/: 2026-05-06-weakness-driven-problem-synthesis.md
docs/superpowers/specs/: 2026-05-06-weakness-driven-problem-synthesis-design.md
references/: error_tag_vocabulary.md
references/prompts/: attribute.txt  cluster.txt  cluster_merge.txt  cluster_refine.txt  synthesize.txt
scripts/: __init__.py  bootstrap.sh  run.py
tests/: test_allocate.py  test_attribute.py  test_cluster.py  test_cluster_merge.py  test_cluster_orchestration.py  test_cluster_pipeline.py  test_cluster_refine.py  test_dedup.py  test_prompts.py  test_report.py  test_run.py  test_solver_view.py  test_synthesize.py
weakness-driven-problem-synthesis/: pyproject.toml
weakness-driven-problem-synthesis/tests/: conftest.py  test_allocate.py  test_attribute.py  test_cluster.py  test_load_filter.py  test_prompts.py  test_report.py  test_run.py  test_schemas.py  test_solver_view.py  test_synthesize.py
weakness-driven-problem-synthesis/weakness_driven_problem_synthesis/: __init__.py  allocate.py  attribute.py  cluster.py  llm_client.py  load_filter.py  report.py  run.py  schemas.py  solver_view.py  synthesize.py
weakness_driven_problem_synthesis/: allocate.py  attribute.py  cluster.py  cluster_merge.py  cluster_precluster.py  cluster_refine.py  cluster_types.py  dedup.py  llm_client.py  load_filter.py  prompts.py  report.py  run.py  schemas.py  solver_view.py  synthesize.py
(+3 files in other folders)
